--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
+    "fastapi>=0.128.0",
     "langchain-chroma>=1.1.0",
     "langchain-core>=1.2.5",
     "langchain-openai>=1.1.6",
