--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "datetime>=6.0",
     "dotenv>=0.9.9",
     "fastapi>=0.128.0",
     "langchain-chroma>=1.1.0",
